# anpr

./: .gitignore  CMakeLists.txt  Kconfig  camera.c  idf_component.yml  lidar.c  main.c  plate_uploader.c  sd_card_logger.c
include/: anpr.h  anpr_config.h  camera.h  lidar.h  plate_uploader.h  sd_card_logger.h
